--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,8 +1,10 @@
 name: Scrape latest  question
 
 on:
+  push:
+  workflow_dispatch:
   schedule:
-    - cron:  '40 10 * * *'
+    - cron:  '6 * * * *'
 
 jobs:
   scheduled:
