--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ sqlparse==0.4.2
 whitenoise==5.2.0
 boto3==1.17.54
 django-storages==1.11.1
+google-api-python-client==2.31.0
+google-auth==2.3.3
 PyYAML==5.4.1
 Pillow==8.3.2
 django-autoslug==1.9.8
